Fix fav icon alignment and use $ufx-base-size for flex-basis

--- a/packages/core/src/components/TickerList/_TickerList.scss
+++ b/packages/core/src/components/TickerList/_TickerList.scss
@@ -76,7 +76,7 @@ $fav-col-min-width: $ufx-base-size * 1.4;
     }
 
     .ReactVirtualized__Table__sortableHeaderIcon {
-      flex-basis: 12px;
+      flex-basis: $ufx-base-size * 1.2;
     }
 
     .ReactVirtualized__Table__headerColumn:last-of-type,
@@ -103,6 +103,7 @@ $fav-col-min-width: $ufx-base-size * 1.4;
         display: flex;
         align-items: baseline;
         justify-content: flex-start;
+        min-height: auto;
       }
     }
 
